update width issue on mobile

--- a/Mobile/landing/cello-video-landing.css
+++ b/Mobile/landing/cello-video-landing.css
@@ -2,7 +2,7 @@
 	bottom: 0;
 	color: #fff;
 }
-.vid-info { position: absolute; bottom: 0; left: 0; width: 100%; background: rgba(0,0,0,0.3); color: #fff; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
+.vid-info { position: absolute; bottom: 0; left: 0; width: 90%; background: rgba(0,0,0,0.3); color: #fff; padding: 1rem; font-family: Avenir, Helvetica, sans-serif; }
 .vid-info h1 { font-size: 2rem; font-weight: 700; margin-top: 0; line-height: 1.2; }
 .vid-info a { display: block; color: #fff; text-decoration: none; background: rgba(0,0,0,0.5); transition: .6s background; border-bottom: none; margin: 1rem auto; text-align: center; }
 
